[feat] update docs for compiler update fix modules dependency for Java 11